sdk/features/identity/applications/authenticator/provisioning/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    app.kubernetes.io/name: default
    app.kubernetes.io/part-of: wapps
